[tool.poetry]
name = "syngo"
version = "0.2.0"
description = "Manage Synapse from Django"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/nim65s/syngo"
repository = "https://github.com/nim65s/syngo.git"

[tool.poetry.urls]
changelog = "https://github.com/nim65s/syngo/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.2"
captcha = "^0.4"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
coverage = "^7.6.2"
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
ipython = "^8.28.0"

[tool.poetry.group.dev.dependencies]
twine = "^4.0.1"
wheel = "^0.37.1"

[tool.black]
target-version = ['py37']

[tool.coverage.run]
source = ["syngo"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
